include/Win64/Physics.ODEImport.hpp

struct TdxJointLimitMotor;
struct TdMass;
struct TdxAutoDisable;
struct TdxDampingParameters;
struct TdxContactParameters;
struct TdxQuickStepParameters;
struct TdObject;
struct TJointInfo1;
struct TJointInfo2;
struct TdxJoint;
struct TdxJointBall;
struct TdxJointHinge;
struct TdxJointUniversial;
struct TdxJointPR;
struct TdxJointPiston;
struct TdxJointSlider;
struct TdxJointHinge2;
struct TdxJointAMotor;
struct TdxJointLMotor;
struct TdxJointPlane2D;
struct TdxJointFixed;
struct TdxPosR;
struct TdxBody;
class DELPHICLASS TBodyList;
struct TdxWorld;
struct TdJointFeedback;
struct TdSurfaceParameters;
struct TdContactGeom;
struct TdContact;
struct TdxGeom;
typedef float TdReal;
typedef float *PdReal;
struct DECLSPEC_DRECORD TdxJointLimitMotor
{
public:
	float vel;
	float fmax;
	float lostop;
	float histop;
	float fudge_factor;
	float normal_cfm;
	float stop_erp;
	float stop_sfm;
	float bounce;
	int limit;
	float limit_err;
};
typedef System::StaticArray<float, 4> TdVector3;
typedef TdVector3 *PdVector3;
typedef System::StaticArray<System::StaticArray<float, 4>, 3> Td3Axis;
typedef System::StaticArray<int, 3> TdInteger3;
typedef System::StaticArray<TdxJointLimitMotor, 3> TdxJointLimitMotor3;
typedef System::StaticArray<float, 4> TdVector4;
typedef System::StaticArray<float, 12> TdMatrix3;
typedef TdVector4 TdQuaternion;
struct DECLSPEC_DRECORD TdMass
{
public:
	float mass;
	TdVector4 c;
	TdMatrix3 I;
};
struct DECLSPEC_DRECORD TdxAutoDisable
{
public:
	float idle_time;
	int idle_steps;
	float linear_average_threashold;
	float angular_average_threashold;
	unsigned average_samples;
};
struct DECLSPEC_DRECORD TdxDampingParameters
{
public:
	float linear_scale;
	float angular_scale;
	float linear_threahold;
	float angular_threashold;
};
struct DECLSPEC_DRECORD TdxContactParameters
{
public:
	float max_vel;
	float min_depth;
};
struct DECLSPEC_DRECORD TdxQuickStepParameters
{
public:
	int num_iterations;
	float w;
};
typedef TdxGeom *PdxGeom;
typedef void __cdecl (*TdMovedCallback)(PdxGeom o1);
typedef TdObject *PdObject;
struct DECLSPEC_DRECORD TdObject
{
public:
	TdxWorld *World;
	TdObject *next;
	PdObject *tome;
	void *userdata;
	int tag;
};
typedef TdxBody *PdxBody;
typedef TdxJoint *PdxJoint;
typedef PdxJoint TdJointID;
struct DECLSPEC_DRECORD TJointInfo1
{
public:
	int m;
	int nub;
};
struct DECLSPEC_DRECORD TJointInfo2
{
public:
	float fps;
	float erp;
	float *J1l;
	float *J1a;
	float *J2l;
	float *J2a;
	int rowskip;
	float *c;
	float *cfm;
	float *lo;
	float *hi;
	int *findex;
};
struct DECLSPEC_DRECORD TdxJoint
{
public:
	TdObject baseObject;
	TJointInfo1 Info1;
	TJointInfo2 Info2;
};
typedef TdxJoint TdxJointNull;
typedef TdxJointBall *PdxJointBall;
struct DECLSPEC_DRECORD TdxJointBall
{
public:
	TdxJoint BaseJoint;
	TdVector3 anchor1;
	TdVector3 anchor2;
	float erp;
	float cfm;
};
typedef TdxJointHinge *PdxJointHinge;
struct DECLSPEC_DRECORD TdxJointHinge
{
public:
	TdxJoint BaseJoint;
	TdVector3 anchor1;
	TdVector3 anchor2;
	TdVector3 axis1;
	TdVector3 axis2;
	TdVector4 qrel;
	TdxJointLimitMotor limot;
};
typedef TdxJointUniversial *PdxJointUniversial;
struct DECLSPEC_DRECORD TdxJointUniversial
{
public:
	TdxJoint BaseJoint;
	TdVector3 anchor1;
	TdVector3 anchor2;
	TdVector3 axis1;
	TdVector3 axis2;
	TdVector4 qrel1;
	TdVector4 qrel2;
	TdxJointLimitMotor limot1;
	TdxJointLimitMotor limot2;
};
typedef TdxJointPR *PdxJointPR;
struct DECLSPEC_DRECORD TdxJointPR
{
public:
	TdxJoint BaseJoint;
	TdVector3 anchor2;
	TdVector3 axisR1;
	TdVector3 axisR2;
	TdVector3 axisP1;
	TdVector4 qrel;
	TdVector3 offset;
	TdxJointLimitMotor limotR;
	TdxJointLimitMotor limotP;
};
typedef TdxJointPiston *PdxJointPiston;
struct DECLSPEC_DRECORD TdxJointPiston
{
public:
	TdxJoint BaseJoint;
	TdVector3 axis1;
	TdVector3 axis2;
	TdVector4 qrel;
	TdVector3 anchor1;
	TdVector3 anchor2;
	TdxJointLimitMotor limotP;
	TdxJointLimitMotor limotR;
};
typedef TdxJointSlider *PdxJointSlider;
struct DECLSPEC_DRECORD TdxJointSlider
{
public:
	TdxJoint BaseJoint;
	TdVector3 axis1;
	TdVector4 qrel;
	TdVector3 offset;
	TdxJointLimitMotor limot;
};
typedef TdxJointHinge2 *PdxJointHinge2;
struct DECLSPEC_DRECORD TdxJointHinge2
{
public:
	TdxJoint BaseJoint;
	TdVector3 anchor1;
	TdVector3 anchor2;
	TdVector3 axis1;
	TdVector3 axis2;
	float c0;
	float s0;
	TdVector3 v1;
	TdVector3 v2;
	TdxJointLimitMotor limot1;
	TdxJointLimitMotor limot2;
	float susp_erp;
	float susp_cfm;
};
struct DECLSPEC_DRECORD TdxJointAMotor
{
public:
	TdxJoint BaseJoint;
	int num;
	int mode;
	TdInteger3 rel;
	Td3Axis axis;
	TdxJointLimitMotor3 limot;
	TdVector3 angle;
	TdVector3 reference1;
	TdVector3 reference2;
};
struct DECLSPEC_DRECORD TdxJointLMotor
{
public:
	TdxJoint BaseJoint;
	int num;
	TdInteger3 rel;
	Td3Axis axis;
	TdxJointLimitMotor3 limot;
};
struct DECLSPEC_DRECORD TdxJointPlane2D
{
public:
	TdxJoint BaseJoint;
	int row_motor_x;
	int row_motor_y;
	int row_motor_angle;
	TdxJointLimitMotor motor_x;
	TdxJointLimitMotor motor_y;
	TdxJointLimitMotor motor_angle;
};
struct DECLSPEC_DRECORD TdxJointFixed
{
public:
	TdxJoint BaseJoint;
	TdVector4 qrel;
	TdVector3 offset;
	float erp;
	float cfm;
};
typedef TdxPosR *PdxPosR;
struct DECLSPEC_DRECORD TdxPosR
{
public:
	TdVector3 pos;
	TdMatrix3 R;
};
struct DECLSPEC_DRECORD TdxBody
{
public:
	TdObject baseObject;
	System::Byte Padding;
	TdxJoint *firstjoint;
	int flags;
	TdxGeom *geom;
	TdMass mass;
	TdMatrix3 invI;
	float invMass;
	TdxPosR posr;
	TdVector4 q;
	TdVector3 lvel;
	TdVector3 avel;
	TdVector3 facc;
	TdVector3 tacc;
	TdVector3 finite_rot_axis;
	TdxAutoDisable adis;
	float adis_timeleft;
	int adis_stepsleft;
	TdVector3 *average_lvel_buffer;
	TdVector3 *average_avel_buffer;
	unsigned average_counter;
	int average_ready;
	TdMovedCallback moved_callback;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};
struct DECLSPEC_DRECORD TdxWorld
{
public:
	TdxBody *firstbody;
	TdxJoint *firstjoint;
	int nb;
	int nj;
	TdVector3 gravity;
	float global_erp;
	float global_cfm;
	TdxAutoDisable adis;
	int body_flags;
	TdxQuickStepParameters qs;
	TdxContactParameters contactp;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};
struct DECLSPEC_DRECORD TdJointFeedback
{
public:
	TdVector3 f1;
	TdVector3 t1;
	TdVector3 f2;
	TdVector3 t2;
};
typedef TdJointFeedback *PTdJointFeedback;
enum DECLSPEC_DENUM TdErrorType : unsigned char { d_ERR_UNKNOWN, d_ERR_IASSERT, d_ERR_UASSERT, d_ERR_LCP };
enum DECLSPEC_DENUM TdJointTypeNumbers : unsigned char { dJointTypeNone, dJointTypeBall, dJointTypeHinge, dJointTypeSlider, dJointTypeContact, dJointTypeUniversal, dJointTypeHinge2, dJointTypeFixed, dJointTypeNull, dJointTypeAMotor, dJointTypeLMotor, dJointTypePlane2D, dJointTypePR, dJointTypePU, dJointTypePiston };
enum DECLSPEC_DENUM TdAngularMotorModeNumbers : unsigned char { dAMotorUser, dAMotorEuler };
struct DECLSPEC_DRECORD TdSurfaceParameters
{
public:
	int mode;
	float mu;
	float mu2;
	float bounce;
	float bounce_vel;
	float soft_erp;
	float soft_cfm;
	float motion1;
	float motion2;
	float motionN;
	float slip1;
	float slip2;
};
struct DECLSPEC_DRECORD TdContactGeom
{
public:
	TdVector3 pos;
	TdVector3 normal;
	float depth;
	TdxGeom *g1;
	TdxGeom *g2;
	int side1;
	int side2;
};
typedef TdContactGeom *PdContactGeom;
struct DECLSPEC_DRECORD TdContact
{
public:
	TdSurfaceParameters surface;
	TdContactGeom geom;
	TdVector3 fdir1;
};
typedef TdContact *PdContact;
typedef void __cdecl (*TdNearCallback)(void * data, PdxGeom o1, PdxGeom o2);
struct DECLSPEC_DRECORD TdxGeom
{
public:
	int _type;
	System::Byte Padding;
	int gflags;
	void *data;
	TdxBody *body;
	TdxGeom *body_next;
	TdxPosR *final_posr;
	TdxPosR *offset_posr;
	TdxGeom *next;
	PdxGeom *tome;
	TdxSpace *parent_space;
	TdAABB aabb;
	unsigned category_bits;
	unsigned collide_bits;
};
extern "C" float __cdecl dJointGetPistonPosition(const PdxJoint dJointID);