Source/Physics.ODEImport.pas


  // info returned by getInfo2 function
  TJointInfo2 = record
    // integrator parameters: frames per second (1/stepsize), default error
    // reduction parameter (0..1).
    fps, erp: TdReal;
    // for the first and second body, pointers to two (linear and angular)
    // n*3 jacobian sub matrices, stored by rows. these matrices will have
    // been initialized to 0 on entry. if the second body is zero then the
    // J2xx pointers may be 0.
    J1l, J1a, J2l, J2a: PdReal;
    // elements to jump from one row to the next in J's
    rowskip: Integer;
    // right hand sides of the equation J*v = c + cfm * lambda. cfm is the
    // "constraint force mixing" vector. c is set to zero on entry, cfm is
    // set to a constant value (typically very small or zero) value on entry.
    c, cfm: PdReal;
    // lo and hi limits for variables (set to -/+ infinity on entry).
    lo, hi: PdReal;
    // findex vector for variables. see the LCP solver interface for a
    // description of what this does. this is set to -1 on entry.
    // note that the returned indexes are relative to the first index of
    // the constraint.
    findex: pinteger;
  end;

  TdxJoint = record
    baseObject: TdObject;
    Info1: TJointInfo1;
    Info2: TJointInfo2;
  end;

  TdxJointNull = TdxJoint;

  PdxJointBall = ^TdxJointBall;

  TdxJointBall = record
    BaseJoint: TdxJoint;
    anchor1: TdVector3; // anchor w.r.t first body
    anchor2: TdVector3; // anchor w.r.t second body
    erp: TdReal; // error reduction
    cfm: TdReal; // constraint force mix in
  end;

  PdxJointHinge = ^TdxJointHinge;

  TdxJointHinge = record
    BaseJoint: TdxJoint;
    anchor1: TdVector3; // anchor w.r.t first body
    anchor2: TdVector3; // anchor w.r.t second body
    axis1: TdVector3; // axis w.r.t first body
    axis2: TdVector3; // axis w.r.t second body
    qrel: TdQuaternion; // initial relative rotation body1 -> body2
    limot: TdxJointLimitMotor; // limit and motor information
  end;

  PdxJointUniversial = ^TdxJointUniversial;

  TdxJointUniversial = record
    BaseJoint: TdxJoint;
    anchor1: TdVector3; // anchor w.r.t first body
    anchor2: TdVector3; // anchor w.r.t second body
    axis1: TdVector3; // axis w.r.t first body
    axis2: TdVector3; // axis w.r.t second body
    qrel1: TdQuaternion;
    // initial relative rotation body1 -> virtual cross piece
    qrel2: TdQuaternion;
    // initial relative rotation virtual cross piece -> body2
    limot1: TdxJointLimitMotor; // limit and motor information for axis1
    limot2: TdxJointLimitMotor; // limit and motor information for axis2
  end;

  PdxJointPR = ^TdxJointPR;

  TdxJointPR = record
    BaseJoint: TdxJoint;

    anchor2: TdVector3;
    /// < @brief Position of the rotoide articulation
    /// <        w.r.t second body.
    /// < @note Position of body 2 in world frame +
    /// < anchor2 in world frame give the position
    /// < of the rotoide articulation
    axisR1: TdVector3;
    /// < axis of the rotoide articulation w.r.t first body.
    /// < @note This is considered as axis1 from the parameter
    /// < view.
    axisR2: TdVector3;
    /// < axis of the rotoide articulation w.r.t second body.
    /// < @note This is considered also as axis1 from the
    /// < parameter view
    axisP1: TdVector3;
    /// < axis for the prismatic articulation w.r.t first body.
    /// < @note This is considered as axis2 in from the parameter
    /// < view
    qrel: TdQuaternion;
    /// < initial relative rotation body1 -> body2.
    offset: TdVector3;
    /// < @brief vector between the body1 and the rotoide
    /// < articulation.
    /// <
    /// < Going from the first to the second in the frame
    /// <  of body1.
    /// < That should be aligned with body1 center along axisP
    /// < This is calculated when the axis are set.
    limotR: TdxJointLimitMotor;
    /// < limit and motor information for the rotoide articulation.
    limotP: TdxJointLimitMotor;
    /// < limit and motor information for the prismatic articulation.
  end;

  PdxJointPiston = ^TdxJointPiston;

  TdxJointPiston = record
    BaseJoint: TdxJoint;

    axis1: TdVector3;
    /// < Axis of the prismatic and rotoide w.r.t first body
    axis2: TdVector3;
    /// < Axis of the prismatic and rotoide w.r.t second body

    qrel: TdQuaternion;
    /// < Initial relative rotation body1 -> body2

    /// Anchor w.r.t first body.
    /// This is the same as the offset for the Slider joint
    /// @note To find the position of the anchor when the body 1 has moved
    /// you must add the position of the prismatic joint
    /// i.e anchor = R1 * anchor1 + dJointGetPistonPosition() * (R1 * axis1)
    anchor1: TdVector3;
    anchor2: TdVector3; // < anchor w.r.t second body

    /// limit and motor information for the prismatic
    /// part of the joint
    limotP: TdxJointLimitMotor;

    /// limit and motor information for the rotoide
    /// part of the joint
    limotR: TdxJointLimitMotor;
  end;

  PdxJointSlider = ^TdxJointSlider;

  TdxJointSlider = record
    BaseJoint: TdxJoint;
    axis1: TdVector3; // axis w.r.t first body
    qrel: TdQuaternion; // initial relative rotation body1 -> body2
    offset: TdVector3; // point relative to body2 that should be
    // aligned with body1 center along axis1
    limot: TdxJointLimitMotor; // limit and motor information
  end;

  PdxJointHinge2 = ^TdxJointHinge2;

  TdxJointHinge2 = record
    BaseJoint: TdxJoint;

    anchor1: TdVector3; // anchor w.r.t first body
    anchor2: TdVector3; // anchor w.r.t second body
    axis1: TdVector3; // axis 1 w.r.t first body
    axis2: TdVector3; // axis 2 w.r.t second body
    c0, s0: TdReal; // cos,sin of desired angle between axis 1,2
    v1, v2: TdVector3; // angle ref vectors embedded in first body
    limot1: TdxJointLimitMotor; // limit+motor info for axis 1
    limot2: TdxJointLimitMotor; // limit+motor info for axis 2
    susp_erp, susp_cfm: TdReal; // suspension parameters (erp,cfm)
  end;

  TdxJointAMotor = record
    BaseJoint: TdxJoint;

    num: Integer; // number of axes (0..3)
    mode: Integer; // a dAMotorXXX constant
    rel: TdInteger3; // what the axes are relative to (global,b1,b2)
    axis: Td3Axis; // three axes
    limot: TdxJointLimitMotor3; // limit+motor info for axes
    angle: TdVector3; // user-supplied angles for axes
    // these vectors are used for calculating euler angles
    reference1: TdVector3; // original axis[2], relative to body 1
    reference2: TdVector3; // original axis[0], relative to body 2
  end;

  TdxJointLMotor = record
    BaseJoint: TdxJoint;

    num: Integer;
    rel: TdInteger3;
    axis: Td3Axis; // three axes
    limot: TdxJointLimitMotor3; // limit+motor info for axes
  end;

  TdxJointPlane2D = record
    BaseJoint: TdxJoint;
    row_motor_x: Integer;
    row_motor_y: Integer;
    row_motor_angle: Integer;
    motor_x: TdxJointLimitMotor;
    motor_y: TdxJointLimitMotor;
    motor_angle: TdxJointLimitMotor;
  end;

  TdxJointFixed = record
    BaseJoint: TdxJoint;
    qrel: TdQuaternion; // initial relative rotation body1 -> body2
    offset: TdVector3; // relative offset between the bodies
    erp: TdReal; // error reduction parameter
    cfm: TdReal; // constraint force mix-in
  end;

  // position vector and rotation matrix for geometry objects that are not
  // connected to bodies.
  PdxPosR = ^TdxPosR;

  TdxPosR = record
    pos: TdVector3;
    R: TdMatrix3;
  end;

  TdxBody = record
    baseObject: TdObject;
{$IFDEF cSINGLE}
    Padding: byte;
{$ENDIF}
    firstjoint: TdJointID; // list of attached joints
    flags: Integer; // some dxBodyFlagXXX flags
    geom: PdxGeom; // first collision geom associated with body
    mass: TdMass; // mass parameters about POR
    invI: TdMatrix3; // inverse of mass.I
    invMass: TdReal; // 1 / mass.mass
    posr: TdxPosR; // position and orientation of point of reference
    q: TdQuaternion; // orientation quaternion
    lvel, avel: TdVector3; // linear and angular velocity of POR
    facc, tacc: TdVector3; // force and torque accululators
    finite_rot_axis: TdVector3; // finite rotation axis, unit length or 0=none
    adis: TdxAutoDisable; // auto-disable parameters
    adis_timeleft: TdReal; // time left to be idle
    adis_stepsleft: Integer; // steps left to be idle
    average_lvel_buffer: PdVector3;
    // buffer for the linear average velocity calculation
    average_avel_buffer: PdVector3;
    // buffer for the angular average velocity calculation
    average_counter: longword; // counter/index to fill the average-buffers
    average_ready: Integer;
    // indicates ( with = 1 ), if the Body's buffers are ready for average-calculations
    moved_callback: TdMovedCallback; // let the user know the body moved
    dampingp: TdxDampingParameters; // damping parameters, depends on flags
    max_angular_speed: TdReal; // limit the angular velocity to this magnitude
  end;

  TBodyList = class(TList)
  private
    function GetItems(I: Integer): PdxBody;
    procedure SetItems(I: Integer; const Value: PdxBody);
  public
    property Items[I: Integer]: PdxBody read GetItems write SetItems; default;
    procedure DeleteAllBodies;
  end;

  (* struct dxWorld : public dBase {
    dxBody *firstbody;		// body linked list
    dxJoint *firstjoint;	// joint linked list
    int nb,nj;			      // number of bodies and joints in lists
    dVector3 gravity;		  // gravity vector (m/s/s)
    dReal global_erp;		  // global error reduction parameter
    dReal global_cfm;		  // global costraint force mixing parameter
    }; *)

  TdxWorld = record // (TdBase)
    firstbody: PdxBody; // body linked list
    firstjoint: PdxJoint; // joint linked list
    nb, nj: Integer; // number of bodies and joints in lists
    gravity: TdVector3; // gravity vector (m/s/s)
    global_erp: TdReal; // global error reduction parameter
    global_cfm: TdReal; // global costraint force mixing parameter
    adis: TdxAutoDisable;
    body_flags: Integer;
    qs: TdxQuickStepParameters;
    contactp: TdxContactParameters;
    dampingp: TdxDampingParameters;
    max_angular_speed: TdReal;
  end;

  TdJointFeedback = record
    f1: TdVector3; // force that joint applies to body 1
    t1: TdVector3; // torque that joint applies to body 1
    f2: TdVector3; // force that joint applies to body 2
    t2: TdVector3; // torque that joint applies to body 2
  end;

  PTdJointFeedback = ^TdJointFeedback;

  TdErrorType = (d_ERR_UNKNOWN, // unknown error
    d_ERR_IASSERT, // user assertion failed */
    d_ERR_UASSERT, // user assertion failed */
    d_ERR_LCP);

  TdJointTypeNumbers = (dJointTypeNone, // or "unknown"
    dJointTypeBall, dJointTypeHinge, dJointTypeSlider, dJointTypeContact,
    dJointTypeUniversal, dJointTypeHinge2, dJointTypeFixed, dJointTypeNull,
    dJointTypeAMotor, dJointTypeLMotor, dJointTypePlane2D, dJointTypePR,
    dJointTypePU, dJointTypePiston);

  TdAngularMotorModeNumbers = (dAMotorUser, dAMotorEuler);

  TdSurfaceParameters = record
    // must always be defined
    mode: Integer;
    mu: TdReal;

    // only defined if the corresponding flag is set in mode
    mu2, bounce, bounce_vel, soft_erp, soft_cfm, motion1, motion2, motionN,
      slip1, slip2: TdReal end;

    TdContactGeom = record pos: TdVector3;
    normal: TdVector3;
    depth: TdReal;
    g1, g2: PdxGeom;
    side1, side2: Integer;
  end;

  PdContactGeom = ^TdContactGeom;

  TdContact = record
    surface: TdSurfaceParameters;
    geom: TdContactGeom;
    fdir1: TdVector3;
  end;

  PdContact = ^TdContact;

  // Collission callback structure
  TdNearCallback = procedure(data: pointer; o1, o2: PdxGeom); cdecl;
